--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@
     </div>
   </section>
   <footer style="background-image: url(./assets/images/WebP/footer_bg_images.webp)"
-    class="max-w-[1920px] bg-cover bg-no-repeat mx-auto">
+    class="max-w-[1920px] -mt-1 bg-cover bg-no-repeat mx-auto">
     <div class="container">
       <div class="flex flex-wrap justify-center items-center">
-        <div class="w-6/12 max-lg:w-full max-lg:pt-[150px] max-lg:pb-[150px] px-5 pt-[217px] pb-[222px]">
+        <div class="w-6/12 max-[1140px]:w-full max-[1140px]:pt-[150px] max-[1140px]:pb-[150px] px-5 pt-[217px] pb-[222px]">
           <h1
             class="leading-[120%] mb-11 max-md:mb-8 max-sm:mb-5 font-extrabold text-white text-[46px] max-lg:text-4xl max-sm:text-[28px]">
             (E,E) Game Theory: An UPGRADE from (3,3)
@@ -463,27 +463,29 @@
             is the UPGRADE.
           </p>
         </div>
-        <div class="w-6/12 max-lg:w-full">
-          <div class="max-w-[530px] min-h-[815px] mx-auto relative">
-            <img src="./assets/images/svg/border_line_1.svg" alt="svg_line_1" class="absolute left-1/2 top-[20%]" />
-            <img src="./assets/images/svg/border_line_2.svg" alt="border_line_2" class=" absolute top-[25%] left-1/2"
+        <div class="w-6/12 max-[1140px]:pb-[100px] max-[1140px]:w-full">
+          <div class="max-w-[530px] max-[530px]:max-w-[333px] min-h-[815px] mx-auto relative">
+            <img src="./assets/images/svg/border_line_1.svg" alt="svg_line_1" class="absolute left-1/2 top-[20%] max-[530px]:hidden" />
+            <img src="./assets/images/svg/border_line_2.svg" alt="border_line_2" class=" absolute top-[25%] left-1/2 max-[530px]:hidden"
               style="transform: translate(-50%);" />
             <img src="/assets/images/svg/border_line_3.svg" alt="border_line_3"
-              class="absolute top-[25.5%] left-[14%]" />
+              class="absolute top-[25.5%] left-[14%] max-[530px]:hidden " /> 
+              <img src="./assets/images/svg/border_line_8.svg" alt="border_line_8" class=" absolute top-[22%] left-[16%] max-[530px]:block hidden">
             <img src="/assets/images/svg/border_line_3.svg" alt="border_line_3"
-              class="absolute top-[25.5%] right-[14%]" />
+              class="absolute top-[25.5%] right-[14%] max-[530px]:hidden" />
             <img src="/assets/images/svg/border_line_4.svg" alt="border_line_3" class="absolute top-[45%] left-[14%]" />
             <img src="/assets/images/svg/border_line_4.svg" alt="border_line_3" class="absolute top-[45%] left-1/2" />
             <img src="/assets/images/svg/border_line_4.svg" alt="border_line_3"
               class="absolute top-[45%] right-[14%]" />
             <img src="./assets/images/svg/border_line_3.svg" alt="border_line_3"
               class="absolute top-[35%] right-[32.5%] rotate-90">
-              <img src="./assets/images/svg/border_line_5.svg" alt="border_line_5" class="absolute top-[61%] left-[15%]">
-              <img src="./assets/images/svg/border_line_6.svg" alt="border_line_6" class="absolute top-[61%] right-[10%] w-[189px]">
+              <img src="./assets/images/svg/border_line_5.svg" alt="border_line_5" class="absolute top-[61%] left-[15% max-[530px]:w-[52px] max-[530px]:top-[64%] max-[530px]:left-[18%]">
+              <img src="./assets/images/svg/border_line_6.svg" alt="border_line_6" class="absolute top-[61%] right-[15%] w-[189px] max-[530px]:w-[118px] max-[530px]:top-[64%] max-[530px]:right-[16.5%]">
+              <img src="./assets/images/svg/border_line_7.svg" alt="border_line_7" class="absolute top-[81%] left-[30%] max-[530px]:w-[119px] max-[530px]:top-[84%] max-[530px]:left-[32%]">
             <div style="transform: translate(-50%)"
               class="left-[50%] top-[10%] rounded bg-white absolute flex justify-center items-center min-h-[93px]">
               <div
-                class="min-h-[80px] min-w-[116px] mx-[6.5px] rounded flex justify-center items-center flex-col bg-[#1643C3]">
+                class="min-h-[80px] min-w-[116px]  mx-[6.5px] rounded flex justify-center items-center flex-col bg-[#1643C3]">
                 <h1
                   class="font-extrabold text-2xl max-lg:text-xl ff-neue-machina leading-[120%] text-white text-center">
                   YOU
@@ -491,77 +493,85 @@
                 <p class="text-white text-sm leading-[160%]">(Flywheel)</p>
               </div>
             </div>
-            <div class="w-max absolute top-[29%] ">
+            <div class="w-max absolute top-[29%] max-[560px]:left-[3%] ">
               <div style="box-shadow: 4.33px 4.33px 16.55px 0px #FFFFFF42;"
-                class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] h-[130px]">
+                class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] max-[560px]:max-w-[150px] max-[530px]:max-w-[100px]  h-[130px]">
                 <img src="./assets/images/svg/EEFI_Bonds.svg" alt="EEFI_Bonds">
-                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] mt-2">EEFI Bonds</h1>
-                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center text-sm"> Purchase. Lock up. Get
+                <h1 class="Neue_Machina_Ultra_bold text-base max-[530px]:text-[12px] text-center leading-[150%] mt-2">EEFI Bonds</h1>
+                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center max-[530px]:text-[10px] text-sm"> Purchase. Lock up. Get
                   Discount</p>
               </div>
             </div>
             <div style="transform: translate(-50%);" class="w-max absolute top-[29%] left-1/2">
               <div style="box-shadow: 4.33px 4.33px 16.55px 0px #FFFFFF42;
-" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] h-[130px]">
+" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] max-[560px]:max-w-[150px] max-[530px]:max-w-[100px]  h-[130px]">
                 <img src="./assets/images/svg/lock.svg" alt="lock">
-                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] mt-2">Vault </h1>
-                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center text-sm"> Deposit + Earn</p>
+                <h1 class="Neue_Machina_Ultra_bold text-base max-[530px]:text-[12px] text-center leading-[150%] mt-2">Vault </h1>
+                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center max-[530px]:text-[10px] text-sm"> Deposit + Earn</p>
               </div>
 
             </div>
-            <div class="w-max  top-[29%] absolute right-0">
+            <div class="w-max  top-[29%] absolute max-[560px]:right-[3%] right-0">
               <div style="box-shadow: 4.33px 4.33px 16.55px 0px #FFFFFF42;
-" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] h-[130px]">
+" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] max-[560px]:max-w-[150px] max-[530px]:max-w-[100px]  h-[130px]">
                 <img src="./assets/images/svg/Lp_positions.svg" alt="lock">
-                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] mt-2">LP Positions </h1>
-                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center text-sm">Yield Farming</p>
+                <h1 class="Neue_Machina_Ultra_bold text-base max-[530px]:text-[12px] text-center leading-[150%] mt-2">LP Positions </h1>
+                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center max-[530px]:text-[10px] text-sm">Yield Farming</p>
               </div>
 
             </div>
-            <div class="w-max  top-[49%] absolute  ">
+            <div class="w-max max-[560px]:left-[3%] top-[49%] absolute  ">
               <div style="box-shadow: 4.33px 4.33px 16.55px 0px #FFFFFF42;
-" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] h-[130px]">
+" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] max-[560px]:max-w-[150px] max-[530px]:max-w-[100px]  h-[130px]">
                 <img src="./assets/images/svg/grow.svg" alt="lock">
-                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] text-center mt-2"> Funding raised acquires
+                <h1 class="Neue_Machina_Ultra_bold text-base max-[530px]:text-[12px] leading-[150%] text-center mt-2"> Funding raised acquires
                   Growth assets</h1>
               </div>
 
             </div>
             <div style="transform: translate(-50%);" class="w-max absolute top-[49%] left-1/2">
               <div style="box-shadow: 4.33px 4.33px 16.55px 0px #FFFFFF42;
-" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] h-[130px]">
+" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] max-[560px]:max-w-[150px] max-[530px]:max-w-[100px]  h-[130px]">
                 <img src="./assets/images/svg/OHM.svg" alt="lock">
-                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] text-center mt-2"> OHM Treasury Strategy
+                <h1 class="Neue_Machina_Ultra_bold text-base max-[530px]:text-[12px]  leading-[150%] text-center mt-2"> OHM Treasury Strategy
                 </h1>
-                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center text-sm"> Deposit + Earn</p>
+                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center max-[530px]:text-[10px] text-sm"> Deposit + Earn</p>
               </div>
             </div>
-            <div class="w-max absolute right-0 top-[49%] ">
+            <div class="w-max absolute max-[560px]:right-[3%] right-0 top-[49%] ">
               <div style="box-shadow: 4.33px 4.33px 16.55px 0px #FFFFFF42;
-" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] h-[130px]">
+" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] max-[560px]:max-w-[150px] max-[530px]:max-w-[100px]  h-[130px]">
                 <img src="./assets/images/svg/market.svg" alt="lock">
-                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] text-center mt-2">Markets </h1>
-                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center text-sm"> Trade + Arb (Fees)</p>
+                <h1 class="Neue_Machina_Ultra_bold text-base max-[530px]:text-[12px] leading-[150%] text-center mt-2">Markets </h1>
+                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center max-[530px]:text-[10px] text-sm"> Trade + Arb (Fees)</p>
               </div>
             </div>
-            <div class="w-max absolute right-[50%] top-[69%] ">
+            <div class="w-max absolute  right-[53%] top-[69%] ">
               <div style="box-shadow: 4.33px 4.33px 16.55px 0px #FFFFFF42;
-" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] h-[130px]">
+" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] max-[560px]:max-w-[150px] max-[530px]:max-w-[100px]  h-[130px]">
                 <img src="./assets/images/svg/yield.svg" alt="lock">
-                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] max-w-[122px] text-center mt-2">Yield From  Growth Assets</h1>
+                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] max-w-[122px] max-[530px]:text-[12px] text-center mt-2">Yield From  Growth Assets</h1>
               </div>
             </div>
-            <div class="w-max absolute right-[13.5%] top-[69%] ">
+            <div class="w-max absolute right-[17.5%] top-[69%] ">
               <div style="box-shadow: 4.33px 4.33px 16.55px 0px #FFFFFF42;
-" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] h-[130px]">
+" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] max-[560px]:max-w-[150px] max-[530px]:max-w-[100px]  h-[130px]">
                 <img src="./assets/images/svg/yield.svg" alt="lock">
-                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] max-w-[122px] text-center mt-2">Yield From  Growth Assets</h1>
+                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] max-w-[122px] max-[530px]:text-[12px] text-center mt-2">Fees. Revenue. Yield to Treasury</h1>
+              </div>
+            </div>
+            <div class="w-max absolute right-[35%] top-[89.5%] ">
+              <div style="box-shadow: 4.33px 4.33px 16.55px 0px #FFFFFF42;
+" class="bg-white rounded-[5.2px] flex flex-col justify-center items-center w-[160px] max-[560px]:max-w-[150px] max-[530px]:max-w-[100px]  h-[130px]">
+                <img src="./assets/images/svg/fire.svg" alt="lock">
+                <h1 class="Neue_Machina_Ultra_bold text-base leading-[150%] max-w-[122px] max-[530px]:text-[12px] text-center mt-2">EEFI Furnace </h1>
+                <p class="max-w-[123px] mx-auto leading-[120%] mt-1 text-center max-[530px]:text-[10px] text-sm">Buy + Burn EEFI</p>
               </div>
             </div>
           </div>
         </div>
   </footer>
-  <script src="./assets/js/app.js">
+  <script src="./assets/js/app.js"> 
 
   </script>
 </body>
