add Roadmap svg

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     };
   </script>
 </head>
-
 <body>
   <section class="relative overflow-hidden max-w-[1920px] mx-auto">
     <img src="./assets/images/WebP/Hero_section_Blue_layer.webp" alt="layer" class="absolute z-[1] top-0 left-0" />
@@ -70,11 +69,18 @@
               <a class="text-white relative after:absolute after:w-0 after:transition-all after:duration-300 after:hover:w-full after:bottom-0 after:left-0 after:h-0.5 after:bg-white pb-0.5"
                 href="/">Roadmap</a>
             </li>
-            <li class="">
-              <a class="flex gap-1 flex-row justify-center items-center relative after:absolute after:w-0 after:transition-all after:duration-300 after:hover:w-full after:bottom-0 after:left-0 after:h-0.5 after:bg-white pb-0.5 text-white"
-                href="/">More
-                <img src="./assets/images/svg/DropDown_hero.svg" alt="DropDown_hero" /></a>
+            <li class="relative group">
+              <a class="flex gap-1 flex-row justify-center items-center relative after:absolute after:w-0 after:transition-all after:duration-300 after:hover:w-full after:bottom-0 after:left-0 after:h-0.5 after:bg-white pb-0.5 text-white" href="#">
+                More
+                <img src="./assets/images/svg/DropDown_hero.svg" alt="DropDown_hero" />
+              </a>
+              <ul class="absolute left-0 hidden group-hover:block bg-black text-white">
+                <li><a class="block px-4 py-2 hover:bg-gray-700" target="_blank" href="https://facebook.com">facebook</a></li>
+                <li><a class="block px-4 py-2 hover:bg-gray-700" target="_blank" href="https://instagram.com">instagram</a></li>
+                <li><a class="block px-4 py-2 hover:bg-gray-700" target="_blank" href="https://x.com/?lang=en">twitter</a></li>
+              </ul>
             </li>
+            
             <li class="lg:hidden">
               <button class="py-4 px-8 rounded-lg border border-white text-white">
                 Enter App
@@ -84,7 +90,7 @@
         </div>
         <div class="max-lg:hidden">
           <button
-            class="py-3 px-8 max-lg:hidden rounded-lg border lg:mr-2 hover:scale-110 transition-all duration-300 border-[#1843BF] text-[#1743C0]">
+            class="py-3 px-8 max-lg:hidden rounded-lg border lg:mr-2 hover:scale-110 transition-all duration-300 border-[#1843BF] bg-white text-[#1743C0]">
             Enter App
           </button>
         </div>
@@ -125,10 +131,10 @@
     <div class="max-w-[1440px]">
       <div class="flex flex-wrap">
         <div class="w-6/12">
-          <img class="w-full translate-x-8" src="./assets/images/png/bull_images.png" alt="bull_images" />
+          <img class="w-full max-w-[649px] translate-x-[130px]" src="./assets/images/png/bull_images.png" alt="bull_images" />
         </div>
-        <div class="w-6/12">
-          <img class="w-full" src="./assets/images/png/bear_images.png" alt="bull_images" />
+        <div class="w-6/12 flex  items-end">
+          <img class="w-full max-w-[481px] translate-y-[23px]" src="./assets/images/png/bear_images.png" alt="bull_images" />
         </div>
       </div>
     </div>
@@ -163,8 +169,12 @@
               <div class="w-1 h-full bg-[#4273FF] rounded-t-full bg-gradient-to-b"></div>
             </div>
             <div
-              class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-white border-opacity-[10%] rounded-full top-[5%]">
+              class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-white border-opacity-[10%] rounded-full top-0"> 
+              <div class="relative">
+              <img src="./assets/images/svg/road_map_dote_border.svg" alt="border" class="absolute -left-[150%] mt-2 ">
+              </div>
             </div>
+
           </div>
         </div>
         <div class="flex md:contents">
@@ -174,6 +184,9 @@
             </div>
             <div
               class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-indigo-400 rounded-full top-0">
+              <div class="relative">
+                <img src="./assets/images/svg/road_map_dote_border.svg" alt="border" class="absolute left-[150%] mt-2 ">
+                </div>
             </div>
           </div>
           <div
@@ -226,6 +239,9 @@
             </div>
             <div
               class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-indigo-400 rounded-full top-[5%]">
+              <div class="relative">
+                <img src="./assets/images/svg/road_map_dote_border.svg" alt="border" class="absolute -left-[150%] mt-2 ">
+                </div>
             </div>
           </div>
         </div>
@@ -236,6 +252,9 @@
             </div>
             <div
               class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-indigo-400 rounded-full top-[5%]">
+              <div class="relative">
+                <img src="./assets/images/svg/road_map_dote_border.svg" alt="border" class="absolute left-[150%] mt-2 ">
+                </div>
             </div>
           </div>
           <div
@@ -297,6 +316,9 @@
             </div>
             <div
               class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-indigo-400 rounded-full top-[5%]">
+              <div class="relative">
+                <img src="./assets/images/svg/road_map_dote_border.svg" alt="border" class="absolute -left-[150%] mt-2 ">
+                </div>
             </div>
           </div>
         </div>
@@ -307,6 +329,9 @@
             </div>
             <div
               class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-indigo-400 rounded-full top-[5%]">
+              <div class="relative">
+                <img src="./assets/images/svg/road_map_dote_border.svg" alt="border" class="absolute left-[150%] mt-2 ">
+                </div>
             </div>
           </div>
           <div
@@ -353,6 +378,9 @@
             </div>
             <div
               class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-indigo-400 rounded-full top-[5%]">
+              <div class="relative">
+                <img src="./assets/images/svg/road_map_dote_border.svg" alt="border" class="absolute -left-[150%] mt-2 ">
+                </div>
             </div>
           </div>
         </div>
@@ -363,6 +391,9 @@
             </div>
             <div
               class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-indigo-400 rounded-full top-[5%]">
+              <div class="relative">
+                <img src="./assets/images/svg/road_map_dote_border.svg" alt="border" class="absolute left-[150%] mt-2 ">
+                </div>
             </div>
           </div>
           <div
@@ -404,6 +435,9 @@
             </div>
             <div
               class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-indigo-400 rounded-full top-[5%]">
+              <div class="relative">
+                <img src="./assets/images/svg/road_map_dote_border.svg" alt="border" class="absolute -left-[150%] mt-2 ">
+                </div>
             </div>
           </div>
         </div>
@@ -414,6 +448,9 @@
             </div>
             <div
               class="absolute w-6 h-6 left-[-11.5px] -mt-3 bg-[#4273FF] border-4 border-indigo-400 rounded-full top-[5%]">
+              <div class="relative">
+                <img src="./assets/images/svg/road_map_dote_border.svg" alt="border" class="absolute left-[150%] mt-2 ">
+                </div>
             </div>
           </div>
           <div
@@ -479,7 +516,7 @@
               class="absolute top-[45%] right-[14%]" />
             <img src="./assets/images/svg/border_line_3.svg" alt="border_line_3"
               class="absolute top-[35%] right-[32.5%] rotate-90">
-              <img src="./assets/images/svg/border_line_5.svg" alt="border_line_5" class="absolute top-[61%] left-[15% max-[530px]:w-[52px] max-[530px]:top-[64%] max-[530px]:left-[18%]">
+              <img src="./assets/images/svg/border_line_5.svg" alt="border_line_5" class="absolute top-[61%] left-[15%] max-[530px]:w-[52px] max-[530px]:top-[64%] max-[530px]:left-[18%]">
               <img src="./assets/images/svg/border_line_6.svg" alt="border_line_6" class="absolute top-[61%] right-[15%] w-[189px] max-[530px]:w-[118px] max-[530px]:top-[64%] max-[530px]:right-[16.5%]">
               <img src="./assets/images/svg/border_line_7.svg" alt="border_line_7" class="absolute top-[81%] left-[30%] max-[530px]:w-[119px] max-[530px]:top-[84%] max-[530px]:left-[32%]">
             <div style="transform: translate(-50%)"
