--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
     <title>EEFI</title>
-    <meta name="title" content="EEFI" />
+    <!-- <meta name="title" content="EEFI" />
     <meta
       name="description"
       content="An ecosystem of unique yield strategies that help you earn yield, amplify, and stretch it across all market conditions"
-    />
+    /> -->
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
+    <!-- <meta property="og:type" content="website" />
     <meta property="og:url" content="https://eefi-58799.web.app/" />
     <meta property="og:title" content="EEFI" />
     <meta
       property="og:description"
       content="An ecosystem of unique yield strategies that help you earn yield, amplify, and stretch it across all market conditions"
     />
-    <meta property="og:image" content="/mete-icon.webp" />
+    <meta property="og:image" content="/mete-icon.webp" /> -->
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
+    <!-- <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://eefi-58799.web.app/" />
     <meta property="twitter:title" content="EEFI" />
     <meta
       property="twitter:description"
       content="An ecosystem of unique yield strategies that help you earn yield, amplify, and stretch it across all market conditions"
     />
-    <meta property="twitter:image" content="/mete-icon.webp" />
+    <meta property="twitter:image" content="/mete-icon.webp" /> -->
     <!-- Meta Tags Generated with https://metatags.io -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./tailwind.config.js"></script>
@@ -113,7 +113,8 @@
                   >IBO Event</a
                 >
               </li>
-              <li><a
+              <li>
+              <a
                   class="text-white relative after:absolute after:w-0 after:transition-all after:duration-300 after:hover:w-full after:bottom-0 after:left-0 after:h-0.5 after:bg-white pb-0.5"
                   href="#hero"
                   >EEFI Tokenomics</a
